@@ -1,9 +1,6 @@
 package org.openmetadata.service.search.security;
 
-import static org.openmetadata.common.utils.CommonUtil.nullOrEmpty;
-
 import java.util.*;
-import java.util.stream.Collectors;
 import org.openmetadata.schema.entity.teams.User;
 import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.MetadataOperation;
@@ -27,9 +24,8 @@ public class RBACConditionEvaluator {
   private final QueryBuilderFactory queryBuilderFactory;
   private final ExpressionParser spelParser = new SpelExpressionParser();
   private final StandardEvaluationContext spelContext;
-  private static final String DOMAIN_ONLY_ACCESS_RULE = "DomainOnlyAccessRule";
   private static final Set<MetadataOperation> SEARCH_RELEVANT_OPS =
-      Set.of(MetadataOperation.VIEW_BASIC, MetadataOperation.VIEW_ALL);
+      Set.of(MetadataOperation.VIEW_BASIC, MetadataOperation.VIEW_ALL, MetadataOperation.ALL);
 
   public RBACConditionEvaluator(QueryBuilderFactory queryBuilderFactory) {
     this.queryBuilderFactory = queryBuilderFactory;
@@ -39,39 +35,89 @@ public class RBACConditionEvaluator {
   public OMQueryBuilder evaluateConditions(SubjectContext subjectContext) {
     User user = subjectContext.user();
     spelContext.setVariable("user", user);
-    ConditionCollector collector = new ConditionCollector(queryBuilderFactory);
+
+    ConditionCollector finalCollector = new ConditionCollector(queryBuilderFactory);
 
     for (Iterator<SubjectContext.PolicyContext> it =
             subjectContext.getPolicies(List.of(user.getEntityReference()));
         it.hasNext(); ) {
       SubjectContext.PolicyContext context = it.next();
+
+      ConditionCollector policyCollector = new ConditionCollector(queryBuilderFactory);
+      List<OMQueryBuilder> allowRuleQueries = new ArrayList<>();
+      List<OMQueryBuilder> denyRuleQueries = new ArrayList<>();
+
       for (CompiledRule rule : context.getRules()) {
-        if ((rule.getCondition() != null
-                && rule.getOperations().stream().anyMatch(SEARCH_RELEVANT_OPS::contains))
-            || rule.getName().equalsIgnoreCase(DOMAIN_ONLY_ACCESS_RULE)) {
-          ConditionCollector ruleCollector = new ConditionCollector(queryBuilderFactory);
-          if (!rule.getResources().isEmpty() && !rule.getResources().contains("All")) {
-            OMQueryBuilder indexFilter = getIndexFilter(rule.getResources());
-            ruleCollector.addMust(indexFilter);
-          }
-          SpelExpression parsedExpression =
-              (SpelExpression) spelParser.parseExpression(rule.getCondition());
-          preprocessExpression(parsedExpression.getAST(), ruleCollector);
-          OMQueryBuilder ruleQuery = ruleCollector.buildFinalQuery();
-          if (rule.getEffect().toString().equalsIgnoreCase("DENY")) {
-            collector.addMustNot(ruleQuery);
-          } else {
-            collector.addMust(ruleQuery);
-          }
+        boolean isDenyRule = rule.getEffect().toString().equalsIgnoreCase("DENY");
+        Set<MetadataOperation> ruleOperations = new HashSet<>(rule.getOperations());
+        ruleOperations.retainAll(SEARCH_RELEVANT_OPS);
+        if (ruleOperations.isEmpty()) {
+          // Skip this rule as it does not affect search results
+          continue;
         }
+
+        OMQueryBuilder ruleQuery = buildRuleQuery(rule, user);
+        if (ruleQuery == null || ruleQuery.isEmpty()) {
+          continue;
+        }
+        if (isDenyRule) {
+          denyRuleQueries.add(ruleQuery);
+        } else {
+          allowRuleQueries.add(ruleQuery);
+        }
+      }
+
+      if (!denyRuleQueries.isEmpty()) {
+        if (denyRuleQueries.size() == 1) {
+          policyCollector.addMustNot(denyRuleQueries.get(0));
+        } else {
+          OMQueryBuilder denyQuery = queryBuilderFactory.boolQuery().should(denyRuleQueries);
+          policyCollector.addMustNot(denyQuery);
+        }
+      }
+
+      if (!allowRuleQueries.isEmpty()) {
+        if (allowRuleQueries.size() == 1) {
+          policyCollector.addMust(allowRuleQueries.get(0));
+        } else {
+          OMQueryBuilder allowQuery = queryBuilderFactory.boolQuery().should(allowRuleQueries);
+          policyCollector.addMust(allowQuery);
+        }
+      } else {
+        policyCollector.addMust(queryBuilderFactory.matchAllQuery());
+      }
+
+      OMQueryBuilder policyFinalQuery = policyCollector.buildFinalQuery();
+      if (policyFinalQuery != null && !policyFinalQuery.isEmpty()) {
+        finalCollector.addMust(policyFinalQuery);
       }
     }
 
-    return collector.buildFinalQuery();
+    return finalCollector.buildFinalQuery();
+  }
+
+  private OMQueryBuilder buildRuleQuery(CompiledRule rule, User user) {
+    ConditionCollector ruleCollector = new ConditionCollector(queryBuilderFactory);
+    spelContext.setVariable("user", user);
+
+    // Apply index filtering if resources are specified and not "All"
+    if (!rule.getResources().isEmpty() && !rule.getResources().contains("All")) {
+      OMQueryBuilder indexFilter = getIndexFilter(rule.getResources());
+      ruleCollector.addMust(indexFilter);
+    }
+
+    if (rule.getCondition() != null && !rule.getCondition().trim().isEmpty()) {
+      SpelExpression parsedExpression =
+          (SpelExpression) spelParser.parseExpression(rule.getCondition());
+      preprocessExpression(parsedExpression.getAST(), ruleCollector);
+    } else {
+      ruleCollector.addMust(queryBuilderFactory.matchAllQuery());
+    }
+
+    return ruleCollector.buildFinalQuery();
   }
 
   private void preprocessExpression(SpelNode node, ConditionCollector collector) {
-    // Delay this check until after processing necessary expressions
     if (collector.isMatchNothing()) {
       return;
     }
@@ -86,35 +132,33 @@ public class RBACConditionEvaluator {
     } else if (node instanceof OpOr) {
       List<OMQueryBuilder> orQueries = new ArrayList<>();
       boolean allMatchNothing = true;
-      boolean hasTrueCondition = false; // Track if any condition evaluated to true
+      boolean hasTrueCondition = false;
 
       for (int i = 0; i < node.getChildCount(); i++) {
         ConditionCollector childCollector = new ConditionCollector(queryBuilderFactory);
         preprocessExpression(node.getChild(i), childCollector);
 
         if (childCollector.isMatchNothing()) {
-          continue; // If this child evaluates to match nothing, skip it
+          continue;
         }
 
         if (childCollector.isMatchAllQuery()) {
-          hasTrueCondition = true; // If any condition evaluates to true, mark it
-          break; // Short-circuit: if any condition in OR evaluates to true, the whole OR is true
+          hasTrueCondition = true;
+          break;
         }
 
         OMQueryBuilder childQuery = childCollector.buildFinalQuery();
         if (childQuery != null) {
-          allMatchNothing =
-              false; // If at least one child query is valid, it’s not all match nothing
+          allMatchNothing = false;
           orQueries.add(childQuery);
         }
       }
 
       if (hasTrueCondition) {
-        collector.addMust(queryBuilderFactory.matchAllQuery()); // OR is true, add match_all
+        collector.addMust(queryBuilderFactory.matchAllQuery());
       } else if (allMatchNothing) {
-        collector.setMatchNothing(true); // OR is false
+        collector.setMatchNothing(true);
       } else {
-        // Add the valid OR queries to the collector
         for (OMQueryBuilder orQuery : orQueries) {
           collector.addShould(orQuery);
         }
@@ -130,7 +174,7 @@ public class RBACConditionEvaluator {
       } else {
         OMQueryBuilder subQuery = subCollector.buildFinalQuery();
         if (subQuery != null && !subQuery.isEmpty()) {
-          collector.addMustNot(subQuery); // Add must_not without extra nesting
+          collector.addMustNot(subQuery);
         }
       }
     } else if (node instanceof MethodReference) {
@@ -169,7 +213,7 @@ public class RBACConditionEvaluator {
     List<String> args = new ArrayList<>();
     for (int i = 0; i < methodRef.getChildCount(); i++) {
       SpelNode childNode = methodRef.getChild(i);
-      String value = childNode.toStringAST().replace("'", ""); // Remove single quotes
+      String value = childNode.toStringAST().replace("'", "");
       args.add(value);
     }
     return args;
@@ -185,27 +229,27 @@ public class RBACConditionEvaluator {
   public void matchAllTags(List<String> tags, ConditionCollector collector) {
     for (String tag : tags) {
       OMQueryBuilder tagQuery = queryBuilderFactory.termQuery("tags.tagFQN", tag);
-      collector.addMust(tagQuery); // Add directly to the collector's must clause
+      collector.addMust(tagQuery);
     }
   }
 
   public void isOwner(User user, ConditionCollector collector) {
     List<OMQueryBuilder> ownerQueries = new ArrayList<>();
-    ownerQueries.add(queryBuilderFactory.termQuery("owner.id", user.getId().toString()));
+    ownerQueries.add(queryBuilderFactory.termQuery("owners.id", user.getId().toString()));
 
     if (user.getTeams() != null) {
       for (EntityReference team : user.getTeams()) {
-        ownerQueries.add(queryBuilderFactory.termQuery("owner.id", team.getId().toString()));
+        ownerQueries.add(queryBuilderFactory.termQuery("owners.id", team.getId().toString()));
       }
     }
 
     for (OMQueryBuilder ownerQuery : ownerQueries) {
-      collector.addShould(ownerQuery); // Add directly to the collector's should clause
+      collector.addShould(ownerQuery);
     }
   }
 
   public void noOwner(ConditionCollector collector) {
-    OMQueryBuilder existsQuery = queryBuilderFactory.existsQuery("owner.id");
+    OMQueryBuilder existsQuery = queryBuilderFactory.existsQuery("owners.id");
     collector.addMustNot(existsQuery);
   }
 
@@ -228,12 +272,12 @@ public class RBACConditionEvaluator {
 
   public void hasDomain(ConditionCollector collector) {
     User user = (User) spelContext.lookupVariable("user");
-    if (nullOrEmpty(user.getDomains())) {
+    if (user.getDomain() == null) {
       OMQueryBuilder existsQuery = queryBuilderFactory.existsQuery("domain.id");
       collector.addMustNot(existsQuery);
     } else {
-      List<String> userIds = user.getDomains().stream().map(ref -> ref.getId().toString()).toList();
-      OMQueryBuilder domainQuery = queryBuilderFactory.termsQuery("domain.id", userIds);
+      String userDomainId = user.getDomain().getId().toString();
+      OMQueryBuilder domainQuery = queryBuilderFactory.termQuery("domain.id", userDomainId);
       collector.addMust(domainQuery);
     }
   }
@@ -257,7 +301,7 @@ public class RBACConditionEvaluator {
     List<String> indices =
         resources.stream()
             .map(resource -> Entity.getSearchRepository().getIndexOrAliasName(resource))
-            .collect(Collectors.toList());
+            .toList();
 
     return queryBuilderFactory.termsQuery("_index", indices);
   }
